--- a/views/answers/new.pug
+++ b/views/answers/new.pug
@@ -2,17 +2,18 @@ extends _layout.pug
 append js
   script(src='/ckeditor/ckeditor.js')
 block content
-  .answer-new
-    .as-head.text-center.large-font
-      a.job-title(href='/job/' + job.id)= job.title
-      span 解答问题
-    include ../share/_question_detail.pug
-    div
-      .a-title.text-bold 你的答案：
-      form.answer-new-form(method='post' action='/question/' + question.id + '/answers/create')
-        input(type='hidden' name='_question' value=question.id)
-        input(type='hidden' name='_user' value=currentUser.id)
-        input(type='hidden' name='_job' value=question._job.id)
-        textarea(name='content' id='content' class='form-control rich-editor')
-        .a-new-submit
-          input.btn.btn-primary(type='submit' value='提 交')
+  .c-answer-head
+    a.c-answer-head__job-link(href='/job/' + job.id)= job.title
+    span 解答问题
+
+  include ../share/_question_detail.pug
+
+  .c-your-answer-txt 你的答案：
+  - var uri = `/question/${question.id}/answers/create`
+  form(method='post' action=uri)
+    input(type='hidden' name='_question' value=question.id)
+    input(type='hidden' name='_user' value=currentUser.id)
+    input(type='hidden' name='_job' value=question._job.id)
+    textarea(name='content' id='content' class='o-fm-ctl js-rich-editor')
+    .c-answer-fm-submit
+      input.btn.btn-primary(type='submit' value='提 交')
