--- a/views/share/_question_detail.pug
+++ b/views/share/_question_detail.pug
@@ -1,13 +1,13 @@
-.as-q
-  .as-q-title.text-bold 问题：#{question.title}
-  .as-q-content.small-font!= question.content
-  .as-q-foot.smaller-font.less-imp
+.c-detail-question
+  .c-detail-question__head.u-bold-text 问题：#{question.title}
+  .c-detail-question__body.u-small-font!= question.content
+  .c-detail-question__foot.u-smaller-font.u-less-imp
     span= question.tag
     span= question.labels.join(' ')
     span 所属职位：
       a(href='/job/' + question._job.id)= question._job.title
-    span.q-level 难度：
-      span.br-theme-fontawesome-stars.vertical-middle
+    span 难度：
+      span.br-theme-fontawesome-stars.u-vertical-middle
         span.br-widget.br-readonly
           each l in [0, 1, 2, 3, 4]
             a(href='#' class={'br-selected': l <= question.level})
