--- a/views/profile/_company.pug
+++ b/views/profile/_company.pug
@@ -1,32 +1,34 @@
 // 公司信息
-div.user-info
-  form
-    .form-group
-      label(for='url' class='label label-input') 公司主页：
-      input(type='url', name='url', id='url', class='form-control change-field', data-ori-value=user.url, value=user.url, required)
-      +buttons
-    .form-group
-      label(for='business' class='label label-input') 所属行业：
-      select(name='business', id='business', class='form-control change-field', data-ori-value=user.business, value=user.business, required)
-        option(value='') 请选择行业
-        each b in businesses
-          option(value=b selected=b == user.business)= b
-      +buttons
-    .form-group
-      label(for='scale' class='label label-input') 规模：
-      select(name='scale', id='scale', class='form-control change-field', data-ori-value=user.scale, value=user.scale, required)
-        option(value='') 请选择企业规模
-        each s,i in scales
-          option(value=i selected=i == user.scale)= s
-      +buttons
-    .form-group
-      label(for='maturity' class='label label-input') 成熟度：
-      select(name='maturity', id='maturity', class='form-control change-field', data-ori-value=user.maturity, value=user.maturity, required)
-        option(value='') 请选择企业成熟度
-        each m,i in maturities
-          option(value=i selected=i == user.maturity)= m
-      +buttons
-    .form-group
-      label(for='desc' class='label label-input') 介绍：
-      textarea(name='desc', id='desc', rows=8, class='form-control rich-editor change-field', data-rule-minlength=64, data-ori-value=user.desc, data-rule-required='true')= user.desc
-      +buttons
+.o-fm-grp
+  label(for='url') 公司主页：
+  input(type='url' name='url' id='url' class='o-fm-ctl js-change-field' data-ori-value=user.url value=user.url)
+  +buttons
+
+.o-fm-grp
+  label(for='business') 所属行业：
+  select(name='business' id='business' class='o-fm-ctl js-change-field' data-ori-value=user.business value=user.business)
+    option(value='') 请选择行业
+    each b in businesses
+      option(value=b selected=b == user.business)= b
+  +buttons
+
+.o-fm-grp
+  label(for='scale') 规模：
+  select(name='scale' id='scale' class='o-fm-ctl js-change-field' data-ori-value=user.scale value=user.scale)
+    option(value='') 请选择企业规模
+    each s,i in scales
+      option(value=i selected=i == user.scale)= s
+  +buttons
+
+.o-fm-grp
+  label(for='maturity' class='label label-input') 成熟度：
+  select(name='maturity' id='maturity' class='o-fm-ctl js-change-field' data-ori-value=user.maturity value=user.maturity)
+    option(value='') 请选择企业成熟度
+    each m,i in maturities
+      option(value=i selected=i == user.maturity)= m
+  +buttons
+
+.o-fm-grp
+  label(for='desc' class='label label-input') 介绍：
+  textarea(name='desc' id='desc' rows=8 class='o-fm-ctl js-rich-editor js-change-field' data-ori-value=user.desc)= user.desc
+  +buttons
