--- a/views/profile/account.pug
+++ b/views/profile/account.pug
@@ -2,79 +2,82 @@ extends _layout.pug
 append js
   script(src=assetHashPath('js/profile/account.js'))
 block right_content
-  .account
-    .header 修改账号信息
-    .account-content
-      .avatar
-        .form-group 头像：
-        img(class='current-avatar' width=70 height=70 src=user.avatarUrl() alt=user.name)
-        span(class='upload btn-normal relative inline-block')
-          label(for='avatar') 上传头像
-          input.absolute(type='file' id='avatar' name='avatar')
-      .overlay(style={display: 'none'})
-      form(method='post' action='/profile/change_avatar2' class='cropDlg overlay-content' style={display: 'none'})
-        .head
-          span 裁减并替换新的头像
-          a.close × 
-        .middle
-          .crop-container.hcenter.relative
-            img.origin-img
-            .cropArea.absolute
-              img.crop-img.absolute
-            .move-area.crop-edge.absolute
-            .left-edge.crop-edge.sep-line.absolute
-            .top-edge.crop-edge.sep-line.absolute
-            .right-edge.crop-edge.sep-line.absolute
-            .bottom-edge.crop-edge.sep-line.absolute
-            .corner.tl-corner.crop-edge.absolute
-            .corner.tm-corner.crop-edge.absolute
-            .corner.tr-corner.crop-edge.absolute
-            .corner.lm-corner.crop-edge.absolute
-            .corner.rm-corner.crop-edge.absolute
-            .corner.bl-corner.crop-edge.absolute
-            .corner.bm-corner.crop-edge.absolute
-            .corner.br-corner.crop-edge.absolute
-        input(type='hidden' name='origin_img_path')
-        input(type='hidden' name='x')
-        input(type='hidden' name='y')
-        input(type='hidden' name='width')
-        input(type='hidden' name='height')
-        .foot
-          input(type='submit' class='btn btn-primary' value='保存')
+  // 头像修改
+  .c-uc-chg-head 修改头像
+  .c-uc-acc-chg
+    div(style={'margin-bottom': '1em'})
+      div(style={'margin-bottom': '1em'}) 头像：
+      img(class='js-cur-ava u-round-border' width=70 height=70 src=user.avatarUrl() alt=user.name)
+      span(class='c-uc-acc-chg__upload-ava o-btn o-btn-normal')
+        label(for='avatar') 上传头像
+        input.absolute(type='file' id='avatar' name='avatar')
 
-      form(method='post' action='/profile/change_account' enctype="multipart/form-data" class='account-edit')
-        if flash.success
-          .flash-success= flash.success
-        else if flash.error
-          .flash-error= flash.error
-        .form-group
-          label(for='name' class='label-input') 用户名：
-          input(type='text', name='name', id='name', class='form-control', value=user.name)
-        .form-group
-          label(for='email' class='label-input') Email：
-          input(type='email', name='email', id='email', class='form-control', value=user.email)
-        .form-group
-          label(for='phone' class='label-input') 电话：
-          input(type='text', name='phone', id='phone', class='form-control', value=user.phone)
-        .form-group
-          input(type='submit', value='更新账号信息' class='btn-primary fir-span')
-          span.text-bold.success-result.result-hint(style={display: 'none'})
+    .o-overlay-bk
+    form(method='post' action='/profile/change_avatar2' class='js-crop-dlg o-overlay-dlg' style={width: '500px'})
+      input(type='hidden' name='origin_img_path')
+      input(type='hidden' name='x')
+      input(type='hidden' name='y')
+      input(type='hidden' name='width')
+      input(type='hidden' name='height')
+      .o-overlay-dlg__head 裁减并替换新的头像
+      .o-overlay-dlg__body
+        .c-ava-crop-area.js-ava-crop-area
+          img.c-ava-crop-area__ori-img.js-origin-img
+          .c-ava-crop-area__ret-img
+            img.js-ret-img.absolute
+          .c-ava-crop-area__move-area.js-crop-edge
+          .c-ava-crop-area__left-edge.js-crop-edge
+          .c-ava-crop-area__top-edge.js-crop-edge
+          .c-ava-crop-area__right-edge.js-crop-edge
+          .c-ava-crop-area__bottom-edge.js-crop-edge
+          .c-ava-crop-area__tl-corner.js-crop-edge
+          .c-ava-crop-area__tm-corner.js-crop-edge
+          .c-ava-crop-area__tr-corner.js-crop-edge
+          .c-ava-crop-area__lm-corner.js-crop-edge
+          .c-ava-crop-area__rm-corner.js-crop-edge
+          .c-ava-crop-area__bl-corner.js-crop-edge
+          .c-ava-crop-area__bm-corner.js-crop-edge
+          .c-ava-crop-area__br-corner.js-crop-edge
+      .o-overlay-dlg__foot
+        input(type='submit' class='o-btn o-btn-primary ol-ok u-fir-span' value='保存')
+        input(type='button' class='o-btn o-btn-normal ol-cancel' value='取消')
 
-    .header 修改密码
-    form(method='post' action='/profile/change_password' class='password-edit account-content')
-      if flash.success
-        .flash-success= flash.success
-      else if flash.error
-        .flash-error= flash.error
-      .form-group
-        label(for='old_pwd' class='label-input') 旧密码：
-        input(type='password', name='old_pwd', id='old_pwd', class='form-control')
-      .form-group
-        label(for='new_pwd' class='label-input') 新密码：
-        input(type='password', name='new_pwd', id='new_pwd', class='form-control')
-      .form-group
-        label(for='c_new_pwd' class='label-input') 确认新密码：
-        input(type='password', name='c_new_pwd', id='c_new_pwd', class='form-control')
-      .form-group
-        input(type='submit', value='更新密码' class='btn-primary fir-span')
-        span.text-bold.success-result.result-hint(style={display: 'none'})
+  //- 账号修改
+  .c-uc-chg-head 修改账号信息
+  form(method='post' action='/profile/change_account' enctype="multipart/form-data" class='account-edit')
+    if flash.success
+      .flash-success= flash.success
+    else if flash.error
+      .flash-error= flash.error
+    .form-group
+      label(for='name' class='label-input') 用户名：
+      input(type='text', name='name', id='name', class='form-control', value=user.name)
+    .form-group
+      label(for='email' class='label-input') Email：
+      input(type='email', name='email', id='email', class='form-control', value=user.email)
+    .form-group
+      label(for='phone' class='label-input') 电话：
+      input(type='text', name='phone', id='phone', class='form-control', value=user.phone)
+    .form-group
+      input(type='submit', value='更新账号信息' class='btn-primary fir-span')
+      span.text-bold.success-result.result-hint(style={display: 'none'})
+
+  //- 修改密码
+  .c-uc-chg-head 修改密码
+  form(method='post' action='/profile/change_password' class='password-edit account-content')
+    if flash.success
+      .flash-success= flash.success
+    else if flash.error
+      .flash-error= flash.error
+    .form-group
+      label(for='old_pwd' class='label-input') 旧密码：
+      input(type='password', name='old_pwd', id='old_pwd', class='form-control')
+    .form-group
+      label(for='new_pwd' class='label-input') 新密码：
+      input(type='password', name='new_pwd', id='new_pwd', class='form-control')
+    .form-group
+      label(for='c_new_pwd' class='label-input') 确认新密码：
+      input(type='password', name='c_new_pwd', id='c_new_pwd', class='form-control')
+    .form-group
+      input(type='submit', value='更新密码' class='btn-primary fir-span')
+      span.text-bold.success-result.result-hint(style={display: 'none'})
