--- a/views/user/passwordReset.pug
+++ b/views/user/passwordReset.pug
@@ -1,33 +1,41 @@
 extends ../layouts/main
 block content
-  .password-reset.hcenter.text-center
+  .c-pwd-reset
     if step < 4
       h2 密码重置
+
     if error
-      .flash-error= error
+      .u-flash-error= error
     else if success
-      .flash-success= success
+      .u-flash-success= success
+
     if step == 1
       form(method='post' action='/password_reset')
-        div
-          p.reset-hint.text-center.small-font 请输入你注册的邮箱地址，我们将会发送一封邮件给你，里面包含密码重置链接，点击链接进入重置流程
-          .form-group
-            input(type='email' name='email' id='email' class='form-control' autofocus)
-          .form-group
-            input(type='submit' class='btn-primary like-fm-ctl' value='发送重置邮件')
+        .c-pwd-reset__hint
+          | 请输入你注册的邮箱地址，我们将会发送一封邮件给你，里面包含密码重置链接，点击链接进入重置流程
+
+        .o-fm-grp
+          input(type='email' name='email' id='email' class='o-fm-ctl' autofocus)
+
+        .o-fm-grp
+          input(type='submit' class='o-btn o-btn-primary' style={width: '100%'} value='发送重置邮件')
+
     else if step == 2
-      p.reset-hint.text-center 请检查你的邮箱是否收到了重置邮件，里面包含了重置链接，点击链接进行重置. 如果没有，请看看垃圾邮箱
+      .c-pwd-reset__hint
+        |请检查你的邮箱是否收到了重置邮件，里面包含了重置链接，点击链接进行重置. 如果没有，请看看垃圾邮箱
+
     else if step == 3
       form(method='post' action='/password_reset/' + token)
-        .form-group
-          label(for='new_password' class='label label-input') 请输入新的密码： 
-          input(type='password' name='new_password' id='new_password' class='form-control' autofocus)
-        .form-group
-          label(for='new_password_again' class='label label-input') 再次输入新的密码： 
-          input(type='password' name='new_password_again' id='new_password_again' class='form-control' autofocus)
-        .form-group
-          input(type='submit' class='btn-primary like-fm-ctl' value='修改密码')
+        .o-fm-grp
+          label(for='new_password') 请输入新的密码： 
+          input(type='password' name='new_password' id='new_password' class='o-fm-ctl' autofocus)
+
+        .o-fm-grp
+          label(for='new_password_again') 再次输入新的密码： 
+          input(type='password' name='new_password_again' id='new_password_again')
+
+        .o-fm-grp
+          input(type='submit' class='o-btn o-btn-primary' style={width: '100%'} value='修改密码')
     else
-      div
-        h2 密码重置成功
-        a(href='/login') 马上去登陆
+      h2 密码重置成功
+      a(href='/login') 马上去登陆
