--- a/views/home/_welcome_signup.pug
+++ b/views/home/_welcome_signup.pug
@@ -4,8 +4,10 @@
       h2 有效的学习和实习方式？
       div 通过问答，在企业和学生之间建立能力评估模型
       div 不做象牙塔里的学霸，解决问题才是王道
+
     form(method='post', action='/signup_step1' class='c-home-welcome__signup js-home-signup-form')
       input(type='hidden', name='step', value='1')
+
       .o-fm-grp
         label(for='name') 用户名：
         input(type='text', name='name', id='name', class='o-fm-ctl', autofocus)
@@ -20,11 +22,10 @@
 
       .o-fm-grp
         label 身份：
-        input(type='radio', id='user-type-student', name='userType', value=0, checked)
-        label.c-home-welcome__signup__ut-label(for='user-type-student') 学生
-
-        input(type='radio', id='user-type-company', name='userType', value=1)
-        label.c-home-welcome__signup__ut-label(for='user-type-company') 公司
+        input.o-hidden-radio(type='radio', id='user-type-student', name='userType', value=0, checked)
+        label.o-fm-ctl.is-radio-label(for='user-type-student') 学生
+        input.o-hidden-radio(type='radio', id='user-type-company', name='userType', value=1)
+        label.o-fm-ctl.is-radio-label(for='user-type-company') 公司
 
       .o-fm-grp
-        input(type='submit', value='加入学做网' class='o-btn o-btn-primary c-home-welcome__signup__submit')
+        input(type='submit', value='加入学做网' class='o-btn o-btn-primary' style={width: '100%'})
