--- a/views/user/_company_show.pug
+++ b/views/user/_company_show.pug
@@ -1,21 +1,20 @@
-.u-basic-info.small-font
-  span
-    img.round-border.vertical-middle(src=user.avatarUrl() alt='头像' width='24px' height='24px')
+.c-user-basics.u-small-font
+  span #[img.c-user-basics__ava(src=user.avatarUrl())]
   span= user.name
   span= user.business
   span= user.scaleValue()
   span= user.maturityValue()
-  span
-    a(href=user.url)= user.url
-.u-desc-sec
-  .head.text-bold 公司介绍：
-  .detail!= user.desc
-.u-desc-sec
-  .head.text-bold 公司发布的所有职位：
+  span #[a(href=user.url)= user.url]
+
+.c-user-part-info
+  .c-user-part-info__head 公司介绍：
+  .c-user-part-info__body!= user.desc
+
+.c-user-part-info
+  .c-user-part-info__head 公司发布的所有职位：
   each job in jobs
-    .u-desc-job.flex
-      span
-        a(href='/job/' + job.id)= job.title
+    .c-user-part-info__cmp-job
+      span #[a(href='/job/' + job.id)= job.title]
       span= job.address
       span= job.displaySalary
       span= job.createdAt.toLocaleDateString()
