--- a/views/user/signupView.pug
+++ b/views/user/signupView.pug
@@ -2,17 +2,19 @@ extends _layout.pug
 append js
   script(src='/ckeditor/ckeditor.js')
 block content
-  .formal-signup
-    .larger-font 加入学做网， 更快找到实习岗位，更好学习专业知识， 快速锁定优秀毕业生：
-    .progress.flex.round-border
-      div.text-center(class={'signup-active': step == 1}) 创建账号
-      div.text-center(class={'signup-active': step == 2}) 完善基本资料
-      div.text-center(class={'signup-active': step == 3}) 注册完毕
-    .current-step.flex
-      case step
-        when 1
-          include ./_signup_step1.pug
-        when 2
-          include ./_signup_step2.pug
-        when 3
-          include ./_signup_step3.pug
+  .u-larger-font
+    | 加入学做网， 更快找到实习岗位，更好学习专业知识， 快速锁定优秀毕业生：
+
+  .c-signup-progress
+    .c-signup-progress__step(class={'is-active': step == 1}) 创建账号
+    .c-signup-progress__step(class={'is-active': step == 2}) 完善基本资料
+    .c-signup-progress__step(class={'is-active': step == 3}) 注册完毕
+
+  .u-flex
+    case step
+      when 1
+        include ./_signup_step1.pug
+      when 2
+        include ./_signup_step2.pug
+      when 3
+        include ./_signup_step3.pug
