--- a/assets/sass/question/show.scss
+++ b/assets/sass/question/show.scss
@@ -1,3 +1,3 @@
-@import  "common";
-@import 'partials/common/question';
-@import 'partials/common/answer';
+@import "common";
+@import '../partials/modules/question';
+@import '../partials/modules/answer';
