--- a/views/about/index.pug
+++ b/views/about/index.pug
@@ -1,6 +1,6 @@
 extends ../layouts/main
 append css
-  link(href=assetHashPath("css/about.css"), rel="stylesheet")
+  link(href=assetHashPath("about.css"), rel="stylesheet")
 block content
   h4(id='desc') 网站介绍
   p 此站点旨在帮忙大学在校及毕业生更好的学习和找实习岗位，同时也帮助企业更好的找到优秀的毕业生。在这里，企业可以发布实习岗位及相应的考题，这些题目都是实践性很强的需要学生付出一定努力才能解决的。学生通过解决问题引导自己的学习同时赢得企业的实习职位，而企业可以通过这种方式找到更合适的毕业生，我们希望通过这样一个平台，帮助到愿意努力的学生
