--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -1,8 +1,8 @@
 extends ../layouts/index
 append css
-  link(href=assetHashPath("css/home.css"), rel="stylesheet")
+  link(href=assetHashPath("home.css"), rel="stylesheet")
 append js
-  script(src=assetHashPath('js/home.js'))
+  script(src=assetHashPath('home.js'))
 block content
   include _welcome_signup.pug
   include _welcome_other.pug
