--- a/views/jobs/_layout.pug
+++ b/views/jobs/_layout.pug
@@ -1,5 +1,5 @@
 extends ../layouts/main
 append css
-  link(href=assetHashPath("css/job.css"), rel="stylesheet")
+  link(href=assetHashPath("job.css"), rel="stylesheet")
 append js
-  script(src=assetHashPath('js/job.js'))
+  script(src=assetHashPath('job.js'))
