--- a/views/profile/_layout.pug
+++ b/views/profile/_layout.pug
@@ -1,6 +1,6 @@
 extends ../layouts/main
 append css
-  link(href=assetHashPath("css/profile.css"), rel="stylesheet")
+  link(href=assetHashPath("profile.css"), rel="stylesheet")
 block content
   .u-flex
     ul.c-uc-left-nav.u-small-font.u-nav-list
