--- a/views/questions/show.pug
+++ b/views/questions/show.pug
@@ -1,6 +1,6 @@
 extends _layout.pug
 append js
-  script(src=assetHashPath('js/question/show.js'))
+  script(src=assetHashPath('question/show.js'))
 block content
   .c-ques-common-head= question.title
 
