--- a/views/answers/_layout.pug
+++ b/views/answers/_layout.pug
@@ -1,5 +1,5 @@
 extends ../layouts/main
 append js
-  script(src=assetHashPath('js/answers.js'))
+  script(src=assetHashPath('answers.js'))
 append css
-  link(href=assetHashPath("css/answers.css"), rel="stylesheet")
+  link(href=assetHashPath("answers.css"), rel="stylesheet")
