--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -8,7 +8,6 @@ html(lang='zh')
     meta(name="description" content=seo && seo.description || '学做网专注于大学在校及毕业生学习及实习岗位')
 
     block css
-      link(href=assetHashPath("css/vendor.css"), rel="stylesheet")
   body.flex
     header.c-header
       include ./_head.pug
@@ -18,4 +17,5 @@ html(lang='zh')
     footer.c-footer
       include ./_foot.pug
     block js
-      script(src=assetHashPath('js/vendor.js'))
+      script(src=assetHashPath('manifest.js'))
+      script(src=assetHashPath('vendor.js'))
