--- a/views/profile/account.pug
+++ b/views/profile/account.pug
@@ -1,6 +1,6 @@
 extends _layout.pug
 append js
-  script(src=assetHashPath('js/profile/account.js'))
+  script(src=assetHashPath('profile/account.js'))
 block right_content
   //- 头像上传
   .c-uc-chg-head 修改头像
