--- a/views/profile/message.pug
+++ b/views/profile/message.pug
@@ -1,6 +1,6 @@
 extends _layout.pug
 append js
-  script(src=assetHashPath('js/profile/message.js'))
+  script(src=assetHashPath('profile/message.js'))
 block right_content
   if messages.length
     .c-uc-messages
