--- a/views/profile/user_info.pug
+++ b/views/profile/user_info.pug
@@ -1,6 +1,6 @@
 extends _layout.pug
 append js
-  script(src=assetHashPath('js/profile/user_info.js'))
+  script(src=assetHashPath('profile/user_info.js'))
   script(src='/ckeditor/ckeditor.js')
 block right_content
   mixin buttons
