--- a/views/questions/_layout.pug
+++ b/views/questions/_layout.pug
@@ -1,3 +1,3 @@
 extends ../layouts/main
 append css
-  link(href=assetHashPath("css/questions.css"), rel="stylesheet")
+  link(href=assetHashPath("questions.css"), rel="stylesheet")
