--- a/views/questions/index.pug
+++ b/views/questions/index.pug
@@ -1,6 +1,6 @@
 extends _layout.pug
 append js
-  script(src=assetHashPath('js/question/index.js'))
+  script(src=assetHashPath('question/index.js'))
 block content
   .q-index
     .c-ques-common-head.u-flex
