--- a/views/questions/search.pug
+++ b/views/questions/search.pug
@@ -1,6 +1,6 @@
 extends _layout.pug
 append js
-  script(src=assetHashPath('js/question/search.js'))
+  script(src=assetHashPath('question/search.js'))
 block content
   .c-ques-common-head
     form(action='/questions' class='c-ques-search-fm')
